<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentArPlatos"
    tools:context=".AugmentedPlatosActivity">

    <fragment
        android:id="@+id/sceneform_ux_fragment"
        android:name="com.univalle.appmuseo.WritingArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="8dp"
        android:src="@drawable/ic_eliminar_dark"
        android:translationZ="-10dp"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini" />

    <HorizontalScrollView
        android:id="@+id/scrollGsllery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white_dark"
        android:translationZ="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pieza_2161"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p2161"
                android:src="@drawable/pieza_2161_thumb" />

            <ImageView
                android:id="@+id/pieza_2219"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p2219"
                android:src="@drawable/pieza_2219_thumb" />

            <ImageView
                android:id="@+id/pieza_2229"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:contentDescription="@string/name_p2229"
                android:src="@drawable/pieza_2229_thumb" />

            <ImageView
                android:id="@+id/pieza_3227"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p3227"
                android:src="@drawable/pieza_3227_thumb" />

            <ImageView
                android:id="@+id/pieza_3274"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p3274"
                android:src="@drawable/pieza_3274_thumb" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:src="@drawable/ic_take_photo"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="8dp"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini"/>

</FrameLayout>