<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="166dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/txt_image_logo"
        android:src="@drawable/ic_portada_rounded_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_titulo_portada"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonArOcarinas"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/button_ocarina_ar"
        android:gravity="bottom"
        android:onClick="goAumentedRealityOcarinas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_button_ocarina"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonArOcarinas" />

    <Button
        android:id="@+id/buttonArPlatos"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_plato_ar"
        android:onClick="goAumentedRealityPlatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_button_platos"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonArPlatos" />

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_style_quiz"
        android:onClick="goQuizStarting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_button_quiz"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuiz" />

</android.support.constraint.ConstraintLayout>