<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentArOcarinas"
    tools:context=".AugmentedOcarinasActivity">

    <fragment
        android:id="@+id/sceneform_ux_fragment_ocarinas"
        android:name="com.univalle.appmuseo.WritingArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/showScrollOcarinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="8dp"
        android:src="@drawable/ic_eliminar_dark"
        android:translationZ="-10dp"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini" />

    <HorizontalScrollView
        android:id="@+id/scrollGalleryOcarinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white_dark"
        android:translationZ="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pieza_2128"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p2128"
                android:src="@drawable/pieza_2128_thumb" />

            <ImageView
                android:id="@+id/pieza_3197"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p3197"
                android:src="@drawable/pieza_3197_thumb" />

            <ImageView
                android:id="@+id/pieza_3203"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_p3203"
                android:src="@drawable/pieza_3203_thumb" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/takePhotoOcarinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:src="@drawable/ic_take_photo"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backHomeOcarinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="8dp"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/white_dark"
        app:fabSize="mini" />

</FrameLayout>